<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starwars_stars"
    tools:context=".view.activities.InfoPersonaje">

    <ProgressBar
        android:id="@+id/pb_2"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="55dp" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/starjedi"
        android:text="@string/info"
        android:textColor="@color/yellow"
        android:textSize="@dimen/mainText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_planet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/planet"
        android:textColor="@color/white"
        android:textSize="@dimen/textInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gl_2" />

    <TextView
        android:id="@+id/tv_rperiod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvInfo"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/rotationpText"
        android:textColor="@color/white"
        android:textSize="@dimen/textInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_planet" />

    <TextView
        android:id="@+id/tv_population"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvInfo"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/poputation"
        android:textColor="@color/white"
        android:textSize="@dimen/textInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_terrain" />

    <TextView
        android:id="@+id/tv_toMovies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:onClick="OnClick"
        android:text="@string/toMovie"
        android:textColor="@color/yellow"
        android:textSize="@dimen/textInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_population" />

    <TextView
        android:id="@+id/tv_climate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvInfo"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/climate"
        android:textColor="@color/white"
        android:textSize="@dimen/textInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_diameter" />

    <TextView
        android:id="@+id/tv_diameter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvInfo"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/diameter"
        android:textColor="@color/white"
        android:textSize="@dimen/textInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_operiod" />

    <TextView
        android:id="@+id/tv_operiod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvInfo"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/operiod"
        android:textColor="@color/white"
        android:textSize="@dimen/textInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_rperiod" />

    <TextView
        android:id="@+id/tv_terrain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tvInfo"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/terrain"
        android:textColor="@color/white"
        android:textSize="@dimen/textInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_climate" />

</androidx.constraintlayout.widget.ConstraintLayout>