<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.ListCharacter">

    <TextView
        android:id="@+id/tv_nameCharacter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/nombre"
        android:textColor="@color/cyan"
        android:textSize="@dimen/mainText"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/gl_element"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_altura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/altura"
        android:textColor="@color/yellow"
        android:textSize="@dimen/mainText"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/gl_element"
        app:layout_constraintVertical_bias="0.33"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_birthyear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/birthyear"
        android:textColor="@color/yellow"
        android:textSize="@dimen/mainText"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/gl_element"
        app:layout_constraintVertical_bias="0.66"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/starjedi"
        android:gravity="center_horizontal"
        android:text="@string/g_nero"
        android:textColor="@color/yellow"
        android:textSize="@dimen/mainText"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/gl_element"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="55dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="250dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>